# Cache

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build.yml  manual.yml
include/: arc.hpp  ideal.hpp  lfu.hpp  lru.hpp  page.hpp
source/: CMakeLists.txt  arc.cpp  ideal.cpp  lfu.cpp  lru.cpp
tests/: CMakeLists.txt  gen_tests.py  gtests.cpp  run_tests.py  unittests.cpp
tests/keys/: ideal.txt  lfu.txt  lru.txt
tests/tests/: test_000001.txt  test_000002.txt  test_000003.txt  test_000004.txt  test_000005.txt  test_000006.txt  test_000007.txt  test_000008.txt  test_000009.txt  test_000010.txt  test_000011.txt
